--- a/index.html
+++ b/index.html
@@ -38,15 +38,14 @@
         <button class="btn btn-success my-4 my-sm-0" type="submit">Cari</button>
       </form>
       <div class="icon mt-2 mr-3">
-        <h5><i class="fas fa-cart-plus ml-4 mr-3" data-toogle="tooltip" title="Keranjang Belanja" ></i>
+        <h5><a href="keranjang.html" style="color: #212529;"><i class="fas fa-cart-plus ml-4 mr-3" data-toogle="tooltip" title="Keranjang Belanja"></i></a>
             <i class="fas fa-bell" data-toogle="tooltip" title="Notifikasi"></i>
-            <i class="far fa-user-circle ml-3" data-toogle="tooltip" title="Akun Saya"></i>
+            <a href="login.html" style="color : #212529;"><i class="far fa-user-circle ml-3" data-toogle="tooltip" title="Akun Saya"></i></a>
         </h5>
 
       </div>  
     </div>
   </nav>
-
   <div class="row mt-5 no-gutters">
     <div class="col-md-2 bg-light">
       <ul class="list-group p-2 pt-4">
@@ -55,16 +54,16 @@
           <span class="badge badge-primary badge-pill">4</span>
         </li>
         <li class="list-group-item d-flex justify-content-between align-items-center">
-          <i class="fas fa-arrow-right">  Sembako</i>
+          <a href=""><i class="fas fa-arrow-right">  Sembako</i></a>
         </li>
         <li class="list-group-item d-flex justify-content-between align-items-center">
-          <i class="fas fa-arrow-right">  Sabun</i>
+          <a href=""><i class="fas fa-arrow-right">  Sabun</i></a>
         </li>
         <li class="list-group-item d-flex justify-content-between align-items-center">
-          <i class="fas fa-arrow-right">  Makanan Ringan</i>
+          <a href=""><i class="fas fa-arrow-right">  Makanan Ringan</i></a>
         </li>
         <li class="list-group-item d-flex justify-content-between align-items-center">
-          <i class="fas fa-arrow-right">  Lainya</i>
+          <a href=""><i class="fas fa-arrow-right">  Lainya</i></a>
         </li>
       </ul>
     </div>
@@ -96,6 +95,23 @@
         </a>
       </div>
       <h4 class="text-center font-weight-bold m-4">PRODUK</h4>
+      <nav aria-label="Page navigation example">
+        <ul class="pagination">
+          <li class="page-item">
+            <a class="page-link" href="#" aria-label="Previous">
+              <span aria-hidden="true">&laquo;</span>
+            </a>
+          </li>
+          <li class="page-item"><a class="page-link" href="#">1</a></li>
+          <li class="page-item"><a class="page-link" href="#">2</a></li>
+          <li class="page-item"><a class="page-link" href="#">3</a></li>
+          <li class="page-item">
+            <a class="page-link" href="#" aria-label="Next">
+              <span aria-hidden="true">&raquo;</span>
+            </a>
+          </li>
+        </ul>
+      </nav>
       <div class="row ml-3">
         <div class="card" style="width: 14rem;">
           <img src="produk/sunlight.jpg" class="card-img-top" alt="...">
@@ -116,6 +132,23 @@
           </div>
         </div>
       </div>
+      <nav aria-label="Page navigation example">
+        <ul class="pagination mt-3">
+          <li class="page-item">
+            <a class="page-link" href="#" aria-label="Previous">
+              <span aria-hidden="true">&laquo;</span>
+            </a>
+          </li>
+          <li class="page-item"><a class="page-link" href="#">1</a></li>
+          <li class="page-item"><a class="page-link" href="#">2</a></li>
+          <li class="page-item"><a class="page-link" href="#">3</a></li>
+          <li class="page-item">
+            <a class="page-link" href="#" aria-label="Next">
+              <span aria-hidden="true">&raquo;</span>
+            </a>
+          </li>
+        </ul>
+      </nav>
     </div>
   </div>    
   <footer class="bg-dark text-white p-4 mt-4">
